<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_variant_grey"
    tools:context=".view.FilmListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filmListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        tools:listitem="@layout/film_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filmListAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_button"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/show_not_full_films_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_full" />

        <com.google.android.material.chip.Chip
            android:id="@+id/show_full_films_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full" />

        <com.google.android.material.chip.Chip
            android:id="@+id/show_all_films_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>