<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_variant_grey"
    tools:context=".view.AddPictureActivity">


    <TextView
        android:id="@+id/addPictureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/take_a_picture"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPictureTextView">


        <TextView
            android:id="@+id/addPictureLabelFocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/addPictureFocal"
            android:text="@string/Focal"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPictureTitle" />

        <EditText
            android:id="@+id/addPictureFocal"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="@+id/addPictureLabelFocal"
            app:layout_constraintTop_toBottomOf="@+id/addPictureLabelFocal" />

        <TextView
            android:id="@+id/addPictureOpeningLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="92dp"
            android:labelFor="@id/addPictureOpening"
            android:text="@string/Opening"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addPictureFocal"
            app:layout_constraintTop_toTopOf="@+id/addPictureLabelFocal" />

        <EditText
            android:id="@+id/addPictureOpening"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="@+id/addPictureOpeningLabel"
            app:layout_constraintTop_toBottomOf="@+id/addPictureOpeningLabel" />

        <TextView
            android:id="@+id/addPictureTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/LayingTime"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addPictureLabelFocal"
            app:layout_constraintTop_toBottomOf="@+id/addPictureFocal" />

        <EditText
            android:id="@+id/addPictureTime"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/addPictureTimeLabel"
            app:layout_constraintTop_toBottomOf="@+id/addPictureTimeLabel" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Lens"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addPictureOpeningLabel"
            app:layout_constraintTop_toBottomOf="@+id/addPictureOpening" />

        <EditText
            android:id="@+id/addPictureLens"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <TextView
            android:id="@+id/addPictureSizeObjectiveLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lens_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addPictureTime"
            app:layout_constraintTop_toBottomOf="@+id/addPictureTime" />

        <EditText
            android:id="@+id/addPictureLensSize"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/addPictureSizeObjectiveLabel"
            app:layout_constraintTop_toBottomOf="@+id/addPictureSizeObjectiveLabel" />

        <Spinner
            android:id="@+id/addPictureMode"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/addPictureLens"
            app:layout_constraintStart_toStartOf="@+id/addPictureModeLabel"
            app:layout_constraintTop_toBottomOf="@+id/addPictureModeLabel" />

        <TextView
            android:id="@+id/addPictureModeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Mode"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addPictureTime"
            app:layout_constraintTop_toBottomOf="@+id/addPictureLensSize" />

        <TextView
            android:id="@+id/addPictureTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_of_your_picture"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addPictureTitle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/addPictureOpening"
            app:layout_constraintStart_toStartOf="@+id/addPictureTitleLabel"
            app:layout_constraintTop_toBottomOf="@+id/addPictureTitleLabel" />

        <ImageView
            android:id="@+id/pictureAddPreviewImage"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/preview" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/picture_preview_maj"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addPictureMode"
            app:layout_constraintTop_toBottomOf="@+id/addPictureMode" />

        <ImageButton
            android:id="@+id/pictureAddPreviewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/pictureAddPreviewImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pictureAddPreviewImage"
            app:layout_constraintTop_toTopOf="@+id/pictureAddPreviewImage"
            app:srcCompat="@drawable/ic_camera" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/addPictureOpening"
            app:layout_constraintTop_toBottomOf="@+id/addPictureOpeningLabel" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/addPictureTime"
            app:layout_constraintStart_toEndOf="@+id/addPictureTime"
            app:layout_constraintTop_toTopOf="@+id/addPictureTime" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f1"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/addPictureFocal"
            app:layout_constraintTop_toBottomOf="@+id/addPictureOpeningLabel" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:backgroundTint="@color/orange"
        android:id="@+id/addPictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>